--- a/root/assets/styles/estilos_luis_fer.css
+++ b/root/assets/styles/estilos_luis_fer.css
@@ -19,13 +19,53 @@ section>aside{
 section>footer{
     grid-column: span 12;
 }
-body{background-color: black ;color: white;}
-article{background-color: rgb(44,43,43); padding: 1.5rem; border-bottom: 1px solid white;}
-#ciclismo{text-align: center;font-size: 3rem;}
+body{background-color: black;color:white}
+article{background-color: rgb(44,43,43);padding: 1.5rem;border-bottom: 1px solid white; text-align: justify; line-height: 30px;}
 #futbol{text-align: center; font-size: 3rem;}
+#ciclismo{text-align: center; font-size: 3rem;}
 .resaltado{color: yellow;}
 nav>ul>li{list-style: none;}
-nav>ul>li>a{text-decoration: none;}
-#footer_blog{margin: 2rem;}
+nav>ul>li>a{color: white;}
+#footer_blog{display: flex;margin: 2rem;align-items: center;justify-content: space-between;padding: 4rem 0 4rem 0;font-size: 1.3rem;}
+#footer_blog div:nth-child(2){font-size: 0.9rem;}
 .ilustracion{display: inline-block; border: 4px solid white;}
-.ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-size: italic;}
+.ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-style: italic;}
+.main{display: inline-block; border: 4px solid white ;}
+.microbloging{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
+nav{font-size: 1.3rem;}
+nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
+nav>ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid white;
+    padding-bottom: 0.5rem;
+}
+article>header>hgroup{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+article>header>hgroup>h2{
+    display: flex;
+    align-items: center;
+}
+article>header>hgroup>h2>img{
+    margin-right: 1rem;
+}
+aside>h2{align-items: center;font-size: 1.6rem;text-align: center;}
+aside>div:nth-of-type(even){background-color: rgb(44, 43, 43);}
+aside>div>img {
+    background-color: rgb(242, 247, 248);
+    padding: 0.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    margin-left: 0.5rem;
+}
+aside>div{
+    display: flex;
+    align-items: center;
+    border-bottom: dashed;
+    border-width: 0.05rem;
+    padding: 0.6rem;
+}
