--- a/root/assets/styles/estilos_luis_fer.css
+++ b/root/assets/styles/estilos_luis_fer.css
@@ -9,15 +9,33 @@ section{
 }
 section>header{
     grid-column: span 12;
+    font-size: clamp(2rem, calc(1vw + 2rem), 7rem);
+
 }
 section>main{
-    grid-column: span 8;
+    grid-column: span 12;
+}
+@media(min-width: 1024.1px){
+    section>main{
+        grid-column: span 8;
+    }
 }
 section>aside{
-    grid-column: span 4;
+    grid-column: span 12;
+}
+@media(min-width: 1024.1px){
+    section>aside {
+        grid-column: span 4;
+    }
 }
 section>footer{
     grid-column: span 12;
+}
+@media(min-width: 1024.1px){
+    section>footer {
+        flex-direction: column;
+        line-height: 3rem;
+    }
 }
 body{background-color: black;color:white}
 article{background-color: rgb(44,43,43);padding: 1.5rem;border-bottom: 1px solid white; text-align: justify; line-height: 30px;}
@@ -32,14 +50,23 @@ nav>ul>li>a{color: white;}
 .ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-style: italic;}
 .main{display: inline-block; border: 4px solid white ;}
 .microbloging{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
-nav{font-size: 1.3rem;}
+nav{font-size: 1.3rem; position: fixed; width: 100%; background-color: black;}
 nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
-nav>ul{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border-bottom: 1px solid white;
-    padding-bottom: 0.5rem;
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
+}
+@media (min-width: 1100px) {
+    nav ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border-bottom: 1px solid red;
+    }
 }
 article>header>hgroup{
     display: flex;
@@ -62,10 +89,17 @@ aside>div>img {
     margin-right: 1rem;
     margin-left: 0.5rem;
 }
-aside>div{
+aside div {
     display: flex;
     align-items: center;
-    border-bottom: dashed;
-    border-width: 0.05rem;
+    justify-content: flex-start;
+    gap: 1rem;
     padding: 0.6rem;
+    border-bottom: 1px dashed #fff;
+}
+@media (min-width: 1024.1px) and (max-width: 1324.1px) {
+    aside div {
+        /* despliega los elementos de microblogging uno encima del otr */
+        flex-direction: column;
+    }
 }
